# lotus-fileserver

./: Cargo.toml  README.md  deploy.md
client/: Cargo.toml
client/src/: app.rs  auth_middleware.rs  db.rs  lib.rs  main.rs
client/src/dao/: mod.rs  sector_dao.rs
client/src/form/: form.rs
client/src/handler/: sector_handler.rs
client/src/model/: model.rs
client/src/service/: sector_service.rs
client/tests/: upload.rs
qfiletrans/: Cargo.toml
qfiletrans/src/: file_manager.rs  lib.rs  mini_server.rs  protocol.rs
server/: Cargo.toml
server/src/: app.rs  main.rs
server/src/handler/: mod.rs  sector_handler.rs
server/src/service/: mod.rs
server/tests/: test01.rs
