[package]
name = "client"
version = "0.1.0"
authors = ["abel <raojianli66@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3.1"
actix-service = "1.0.0"
actix-rt = "1"

rusqlite = "0.23.1"
r2d2 = "0.8.2"
r2d2_sqlite = "0.16.0"

bytes = "0.5.2"

env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static="1.4.0"

log = "0.4.7"


