[package]
name = "qfiletrans"
version = "0.1.0"
authors = ["abel <raojianli66@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.3"
byteorder = "1.3.4"
anyhow ="1.0.32"
rand = "0.7.3"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
rayon = "1.4.0"
log = "0.4.11"
structopt = "0.2.10"
thread-priority = "0.2.0"

[dev-dependencies]
env_logger = "0.7.1"
